@@ -28,6 +28,9 @@ ubuntu-image (0.12+17.04ubuntu1) UNRELEASED; urgency=medium
     equivalent).  (LP: #1638926)
   * d/control: Add run-time dependencies which are missing from snapd but
     are required for `snap prepare-image`.  (LP: #1642427)
+  * Structures with type='mbr' are deprecated.  Use structure role
+    instead.  (LP: #1638660)
+  * mbr structures must start at offset 0.  (LP: #1630769)
 
  -- Barry Warsaw <barry@ubuntu.com>  Tue, 08 Nov 2016 17:31:21 -0500
 
